--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jspdf": "^2.2.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-bootstrap": "^0.25.0",
