--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "file-saver": "^2.0.5",
     "formik": "^2.2.6",
     "jspdf": "^2.2.0",
+    "multer": "^1.4.2",
+    "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-bootstrap-validation": "^0.1.11",
